<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="compassContentDescription">Map compass. Click to reset the map rotation to North.</string>
    <string name="attributionsIconContentDescription">Attribution icon. Click to show attribution dialog.</string>
    <string name="attributionsDialogTitle">Mapbox Android SDK</string>
    <string name="mapboxIconContentDescription">Mapbox logo.</string>
    <string name="infoWindowTitle">Title</string>
    <string name="infoWindowDescription">Description</string>
    <string name="infoWindowAddress">Address</string>

    <!-- these are public -->
    <string name="style_mapbox_streets">asset://styles/streets-v8.json</string>
    <string name="style_emerald">asset://styles/emerald-v8.json</string>
    <string name="style_light">asset://styles/light-v8.json</string>
    <string name="style_dark">asset://styles/dark-v8.json</string>
    <string name="style_satellite">asset://styles/satellite-v8.json</string>
    <string name="style_satellite_streets">asset://styles/satellite-hybrid-v8.json</string>
</resources>
